--- a/i3/config
+++ b/i3/config
@@ -190,3 +190,41 @@ exec xautolock -time 5 -locker '~/Apps/i3-config/submodules/i3lock-fancy/lock -t
 
 # do not lock screen when netflix, vlc, etc
 exec ~/Apps/i3-config/submodules/lightsonplus/lightson+.sh &
+
+# power menu
+set $sysmenu "system:  [r]eload  [l]ogout  [p]oweroff  re[b]oot"
+bindsym $mod+Delete      mode $sysmenu
+
+mode $sysmenu {
+    bindsym r         restart
+    bindsym l         exit
+    bindsym p         exec shutdown -P now
+    bindsym b         exec shutdown -r now
+    bindsym Return    mode "default"
+    bindsym Escape    mode "default"
+}
+
+# audio menu
+set $audiomenu "volume:  [+]10%  [-]10%  [m]ute  [r]eset"
+bindsym $mod+F12         mode $audiomenu
+
+mode $audiomenu {
+    bindsym r             exec --no-startup-id ~/Apps/i3-config/scripts/volume/volume.sh set 100
+    bindsym plus          exec --no-startup-id ~/Apps/i3-config/scripts/volume/volume.sh +
+    bindsym KP_Add        exec --no-startup-id ~/Apps/i3-config/scripts/volume/volume.sh +
+    bindsym minus         exec --no-startup-id ~/Apps/i3-config/scripts/volume/volume.sh -
+    bindsym KP_Subtract   exec --no-startup-id ~/Apps/i3-config/scripts/volume/volume.sh -
+    bindsym m             exec --no-startup-id pactl set-sink-mute 1 toggle
+    bindsym Return        mode "default"
+    bindsym Escape        mode "default"
+}
+
+# audio buttons
+bindsym XF86AudioRaiseVolume exec --no-startup-id ~/Apps/i3-config/scripts/volume/volume.sh +
+bindsym XF86AudioLowerVolume exec --no-startup-id ~/Apps/i3-config/scripts/volume/volume.sh -
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+
+# Screen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
+
