--- a/i3/config
+++ b/i3/config
@@ -171,13 +171,15 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	status_command i3status
-    colors {
-        statusline #AAAAAA
-        background #333333
-        focused_workspace #282828 #282828 #FFFFFF
-        inactive_workspace #333333 #333333 #AAAAAA
-    }
+    status_command /home/elliott/go/src/github.com/davidscholberg/goblocks/goblocks
+    #status_command goblocks
+	#status_command i3status
+    #colors {
+    #    statusline #AAAAAA
+    #    background #333333
+    #    focused_workspace #282828 #282828 #FFFFFF
+    #    inactive_workspace #333333 #333333 #AAAAAA
+    #}
 }
 
 client.unfocused #333333 #333333 #FFFFFF #333333
