--- a/i3/config
+++ b/i3/config
@@ -175,7 +175,7 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
     #status_command ~/Apps/i3-config/submodules/goblocks/goblocks
-    status_command goblocks
+    status_command ~/go/bin/goblocks
 	#status_command i3status
     #colors {
     #    statusline #AAAAAA
