--- a/i3/config
+++ b/i3/config
@@ -227,9 +227,13 @@ mode $audiomenu {
 }
 
 # audio buttons
-bindsym XF86AudioRaiseVolume exec --no-startup-id ~/Apps/i3-config/scripts/volume/volume.sh +
-bindsym XF86AudioLowerVolume exec --no-startup-id ~/Apps/i3-config/scripts/volume/volume.sh -
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+#bindsym XF86AudioRaiseVolume exec --no-startup-id ~/Apps/i3-config/scripts/volume/volume.sh +
+#bindsym XF86AudioLowerVolume exec --no-startup-id ~/Apps/i3-config/scripts/volume/volume.sh -
+#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+
+bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 1+ unmute"
+bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 1- unmute"
+bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
 
 # Screen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
