--- a/i3/config
+++ b/i3/config
@@ -47,6 +47,9 @@ exec --no-startup-id nm-applet
 exec --no-startup-id feh --bg-tile /home/elliott/Pictures/Wallpapers/escheresque_ste.png
 #exec --no-startup-id feh --bg-scale /home/elliott/Pictures/Wallpapers/long-exposure-of-the-eclipse-x-post-from-rwoahdude-1920×1080.grayscale.jpg
 
+# wireless
+exec --no-startup-id wicd-gtk -t
+
 # keyboard heatmap
 exec --no-startup-id inputscope-listener
 
@@ -233,7 +236,7 @@ mode $audiomenu {
 
 bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 1+ unmute"
 bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 1- unmute"
-bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
+bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"q
 
 # Screen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
