--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "submodules/lightsonplus"]
 	path = submodules/lightsonplus
 	url = git@github.com:devkral/lightsonplus.git
+[submodule "submodules/goblocks"]
+	path = submodules/goblocks
+	url = https://github.com/ElliottLandsborough/goblocks
+[submodule "submodules/display-visor"]
+	path = submodules/display-visor
+	url = git@github.com:beanaroo/display-visor.git
