--- a/i3/config
+++ b/i3/config
@@ -53,11 +53,6 @@ exec --no-startup-id feh --bg-tile /home/elliott/Pictures/Wallpapers/escheresque
 # dual screen
 #exec --no-startup-id xrandr --dpi 96 --output HDMI-0 --auto --output DVI-D-0 --auto --right-of HDMI-0 --rotate left
 
-# print screen
-bindsym --release Print exec "scrot -m '/home/elliott/Pictures/screenshots/%s_%H%M_%d.%m.%Y_$wx$h.png'"
-bindsym --release Shift+Print exec "scrot -s '/home/elliott/Pictures/screenshots/%s_%H%M_%d%m%Y_$wx$h.png'"
-bindsym --release $mod+Shift+Print exec "scrot -u -d 4 '/home/elliott/Pictures/screenshots/%s_%H%M_%d%m%Y_$wx$h.png'"
-
 # blueman
 exec --no-startup-id blueman-applet
 
@@ -77,10 +72,10 @@ bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+#bindsym $mod+j focus left
+#bindsym $mod+k focus down
+#bindsym $mod+l focus up
+#bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -209,10 +204,14 @@ client.focused_inactive #333333 #333333 #FFFFFF #000000
 client.focused #000000 #000000 #FFFFFF #000000
 
 # lock screen with win+l
-bindsym $mod+Mod1+l exec "~/Apps/i3-config/submodules/i3lock-fancy/lock -t ''"
+#bindsym $mod+Mod1+l exec "~/Apps/i3-config/submodules/i3lock-fancy/lock -t ''"
+bindsym $mod+l exec "~/Apps/i3-config/scripts/lock/fuzzy_lock.sh"
 
 # lock screen after 5 minutes
-exec xautolock -time 5 -locker '~/Apps/i3-config/submodules/i3lock-fancy/lock -t ""' &
+#exec xautolock -time 5 -locker '~/Apps/i3-config/submodules/i3lock-fancy/lock -t ""' &
+exec xautolock -time 5 -locker '~/Apps/i3-config//scripts/lock/fuzzy_lock.sh' &
+
+
 
 # do not lock screen when netflix, vlc, etc
 exec ~/Apps/i3-config/submodules/lightsonplus/lightson+.sh &
