--- a/i3/config
+++ b/i3/config
@@ -62,6 +62,9 @@ exec --no-startup-id blueman-applet
 # power manager
 exec --no-startup-id xfce4-power-manager
 
+# time tracking
+exec --no-startup-id /home/elliott/Apps/activitywatch/aw-qt
+
 # print screen: run shutter in select mode for screenshots
 bindsym Print exec shutter -s -C
 
