--- a/i3/config
+++ b/i3/config
@@ -13,6 +13,11 @@ set $mod Mod4
 set $dmenu "dmenu -f -i -fn 'DejaVu Sans-10' -l 20"
 set $term "i3-sensible-terminal"
 
+# set sway to en-gb
+input * {
+    xkb_layout "gb"
+}  
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:monospace 8
@@ -41,16 +46,20 @@ bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
 
 # network manager on startup
-#exec --no-startup-id nm-applet
+exec --no-startup-id nm-applet
 
 # wireless
-exec --no-startup-id wicd-gtk -t
+#exec --no-startup-id wicd-gtk -t
 
 # start pidgin
-exec --no-startup-id pidgin
+#exec --no-startup-id pidgin
 
 # wallpaper
 exec --no-startup-id feh --bg-tile /home/elliott/Pictures/Wallpapers/escheresque_ste.png
+#exec --no-startup-id feh --bg-scale /home/elliott/Pictures/Wallpapers/long-exposure-of-the-eclipse-x-post-from-rwoahdude-1920×1080.grayscale.jpg
+
+# wayland wallpaper
+exec --no-startup-id swaybg --mode=tile --image="/home/elliott/Pictures/Wallpapers/escheresque_ste.png"
 
 # clipboard
 exec --no-startup-id clipit
